# endstone_real_weather

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
assets/: city.json
src/endstone_example/: __init__.py  example.py
src/endstone_real_weather/: __init__.py  config.toml  real_weather.py
