[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-example"
version = "0.1.0"
dependencies = []
authors = [
    { name = "Endstone Developers", email = "hello@endstone.dev" },
    { name = "Huang FTS427", email = "FTS427@outlook.com" },
]
description = "Python example plugin for Endstone servers"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin"]

[project.urls]
Homepage = "https://github.com/ZH-Server/endstone_NAME/"

[project.entry-points."endstone"]
example = "endstone_example:ExamplePlugin"